Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97257

QVideoWidget not showing after minimizing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.8, 6.2, 6.3.0 Alpha
    • 6.2.0
    • Multimedia
    • None
    • Linux/X11
    • 28138aa80a14279a72af2818f5bbbaa670283964 (qt/qtbase/dev) 3ae56570bf6272709a96c8740ff22eca2d8f83e9 (qt/qtbase/6.2) 4098a840d74d4a134bc6a7c71f12607d27308fa2 (qt/tqtc-qtbase/5.15)

      If the window containing the QVideoWidget is minimized and then restored then the image is no longer observed but the sound is heard.

       

      #include <QApplication>
      #include <QAudioOutput>
      #include <QMediaPlayer>
      #include <QTimer>
      #include <QVideoWidget>
      
      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
          QVideoWidget w;
          w.resize(640, 480);
          w.show();
      
          QMediaPlayer player;
          QAudioOutput audioOutput;
          player.setAudioOutput(&audioOutput);
          player.setVideoOutput(&w);
          player.setSource(QUrl("http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"));
          player.play();
      
          QTimer::singleShot(3000, &w, &QVideoWidget::showMinimized);
          QTimer::singleShot(6000, &w, &QVideoWidget::showNormal);
      
          return a.exec();
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            laknoll Lars Knoll
            eyllanesc Edwin Christian Yllanes Cucho
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes